# CoEdit2.0

./: .gitignore  README.md
backend/: Cargo.toml
backend/docs/: crdt.md
backend/src/: lib.rs  main.rs
backend/src/crdt/: document.rs  mod.rs  position.rs  timestamp.rs
backend/src/websocket/: connection.rs  message.rs  mod.rs  server.rs
backend/tests/: mod.rs
backend/tests/crdt/: document_tests.rs  mod.rs  position_tests.rs  timestamp_tests.rs
backend/tests/websocket/: connection_tests.rs  message_tests.rs  mod.rs  server_tests.rs
docs/: ROADMAP.md  TESTS.md  websocket.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
